--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!-- custom Color Code-->
+    <color name="pinkColor">#e2136e</color>
+    <color name="offWhite">#969491</color>
 </resources>
